Add default mm maps and readme.

--- a/cfg/my.cfg
+++ b/cfg/my.cfg
@@ -402,6 +402,7 @@ option_duck_method "0"
 option_speed_method "0"
 play_distance "1"
 player_botdifflast_s "2"
+player_competitive_maplist_8_7_0_A1CF073A "mg_de_mirage,mg_de_inferno,mg_de_cache,mg_de_dust2"
 player_nevershow_communityservermessage "0"
 player_teamplayedlast "2"
 r_drawmodelstatsoverlaymax "1.5"
@@ -489,7 +490,7 @@ voice_modenable "1"
 voice_scale "1.0"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.35"
+volume "0.85"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
